# translation-libras-to-ptbr

./: README.md  pyproject.toml
data/: libras_dictionary.csv  libras_dictionary_cleaned.csv  libras_dictionary_cleaned_sample.csv
devops/: install_chrome_driver.sh
notebooks/: grammar_model.ipynb  model.ipynb  model_transformers.ipynb  web_scraping_ines.ipynb
